add light, temp and more data
